Fix CSS on the skip links to avoid the extra padding

--- a/src/sass/content/_theme-tweaks.scss
+++ b/src/sass/content/_theme-tweaks.scss
@@ -1,6 +1,17 @@
 /* Make skip to content link visible upon focus (it was hidden by the ASU
 Header */
-.sr-only-focusable:active, .sr-only-focusable:focus {
-    position: relative;
-    z-index: 1050;
+.sr-only-focusable:active,
+.sr-only-focusable:focus {
+  position: relative;
+  z-index: 1050;
+}
+
+// The .PXYlt class is coming from the ASU Header
+// May be suitable to just change the CSS there, but would still need
+// to target the .sr-focusable class here anyway
+.PXYlt .header-top .nav .links-container .nav-link:focus,
+.PXYlt .header-top .nav .links-container .nav-link:active,
+.sr-only-focusable:active,
+.sr-only-focusable:focus {
+  padding: 0.25rem 0.5rem !important;
 }
